JDK 9 b93 breaks Apache Lucene due to compact strings

XMLWordPrintable

    • b93
    • 9
    • b105
    • x86_64
    • linux_ubuntu

      FULL PRODUCT VERSION :
      java version "1.9.0-ea"
      Java(TM) SE Runtime Environment (build 1.9.0-ea-b93)
      Java HotSpot(TM) 64-Bit Server VM (build 1.9.0-ea-b93, mixed mode)

      ADDITIONAL OS VERSION INFORMATION :
      Linux serv1 3.19.0-33-generic #38~14.04.1-Ubuntu SMP Fri Nov 6 18:17:28 UTC 2015 x86_64 x86_64 x86_64 GNU/Linux

      A DESCRIPTION OF THE PROBLEM :
      When compact strings are enabled, Lucene tests fails reproducible. We don't know the exact cause, because Strings are used anywhere in the code, so it is not easy to reproduce isolated.

      Running Lucene tests causes several tests of Lucene's core testsuite to fail.

      REGRESSION. Last worked in version 9

      ADDITIONAL REGRESSION INFORMATION:
      worked with JDK 9 b90

      STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
      Checkout Apache Lucene Core from svn and bootstrap ivy:
      $ svn co http://svn.apache.org/repos/asf/lucene/dev/trunk/lucene
      $ cd trunk
      $ ant ivy-bootstrap

      Run tests in core module:
      $ cd core
      $ ant test

      EXPECTED VERSUS ACTUAL BEHAVIOR :
      EXPECTED -
      Tests should pass (as they do with JDK 8 or JDK 9b90)
      ACTUAL -
      Several tests fail. The exact number of failing tests depends on randomization. To reproduce the same failure use the command line printed out on failure (including a random seed).

      Please contact the Apache Lucene devlopment team (dev@lucene.apache.org or myself uschindler@apache.org) for help in reproducing. I will also hang on OpenJDK mailing list.

      REPRODUCIBILITY :
      This bug can be reproduced always.

      CUSTOMER SUBMITTED WORKAROUND :
      With compact strings disabled, tests pass as usual:

      $ ant test -Dargs='-XX:-CompactStrings'

            Assignee:
            Tobias Hartmann
            Reporter:
            Webbug Group
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: