8144212: JDK 9 b93 breaks Apache Lucene due to compact strings

String compress/inflate intrinsics need to capture char and byte memory.

Reviewed-by: aph, roland, kvn